k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: life-tracker-backend-staging-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: staging.life-stats.net
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: life-tracker-backend-staging-service
                port:
                  number: 80
  tls:
    - hosts:
        - life-stats.net
        - www.life-stats.net
      secretName: letsencrypt-prod
